--- a/html/css/estilos.css
+++ b/html/css/estilos.css
@@ -19,3 +19,12 @@ h2 {
     width: 300px;   
     margin: 20px 15px 20px 15px;
 }
+
+@media (max-width: 600px) {
+  .facet_sidebar {
+    display: none;
+  }
+}
+img{
+    border-right: 15px;
+}
