--- a/html/css/estilos.css
+++ b/html/css/estilos.css
@@ -1,30 +1,18 @@
-header {
-   padding: 20px 40px 20px 40px;      
+/* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* otros estilos predeterminados que deseas eliminar */
 }
-
-img {
-    float: right;
-    width: 200px;
-    height: 200px; 
-}
-
-h1 {
-    color: brown;
-    font-weight: bold;
-    text-align: center;
-}
-
-h2 {
-    color: Grey;
-    width: 300px;   
-    margin: 20px 15px 20px 15px;
-}
-
-@media (max-width: 600px) {
+@media (max-width: 600px) 
+{
   .facet_sidebar {
     display: none;
   }
 }
-img{
-    border-right: 15pxgit;
+h1 {
+  font-family: 'Mukta', sans-serif;
+}
+img {
+  position: center;
 }
