--- a/html/css/estilos.css
+++ b/html/css/estilos.css
@@ -1,21 +1,36 @@
 *
 {
-  
-
 
 h1 {
   font-family: 'Mukta', sans-serif;
 }
 
-#foto4x4 {
-  position: left;
 }
 
-ul {
+#curriculum {
+  margin-left: 250px;
+}
+
+img {
+  float: left;
+  margin: 25px 0px 0px 10px;
+}
+
+.epigrafe {
+ margin: 50px 10px 10px 100px;
+  padding: 60px 150px 15px 50px;
+}
+
+#info_primaria {
+  margin-top: 100px;
+}
+
+.escrito, .estudios {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-
+#curriculum {
+  position: ;
 }
