--- a/html/css/estilos.css
+++ b/html/css/estilos.css
@@ -1,24 +1,34 @@
-*
-{
+* {
+  body {
+    background-color: lightgreen;
+  }
 
-h1 {
-  font-family: 'Mukta', sans-serif;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
+
+#partesuperior{
+  background-color: rgb(127, 160, 71);
 }
 
 #curriculum {
-  margin-left: 250px;
+text-align: center;
+font-family: 'Mukta', sans-serif;
 }
 
 img {
   float: left;
-  margin: 25px 0px 0px 10px;
+margin: 15px 0px 15px 0px;
 }
 
 .epigrafe {
  margin: 50px 10px 10px 100px;
-  padding: 60px 150px 15px 50px;
+  padding: 25px 100px 28px 50px;
 }
 
 #info_primaria {
@@ -31,6 +41,3 @@ img {
   padding: 0;
 }
 
-#curriculum {
-  position: ;
-}
